# vertigo

vertigo/: AUTHORS  ChangeLog  Doxyfile  Makefile.in  README  VERSION  aclocal.m4  conf  config.h.in  configure  configure.in  configure.in.in  subdirs  vertigo.lsm  vertigo.spec
vertigo/admin/: Makefile  Makefile.in  am_edit
vertigo/po/: Makefile.in  vertigo.pot  xchat-common.pot
vertigo/vertigo/: Makefile.am  Makefile.in
vertigo/vertigo/common/: Makefile.am  Makefile.in  cfgfiles.c  cfgfiles.h  ctcp.c  ctcp.h  dcc.c  dcc.h  fe.h  history.c  history.h  identd.c  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  loo  make-te.c  modes.c  modes.h  network.c  network.h  notify.c  notify.h  outbound.c  outbound.h  plugin-timer.c  plugin-timer.h  plugin.h  proto-irc.c  proto-irc.h  server.c  server.h  servlist.c  servlist.h  ssl.c  ssl.h  text.c  text.h  (+12 more)
vertigo/vertigo/fe-kde/: Makefile.am  Makefile.in  TODO  app.cpp  app.h  chanlist.cpp  chanlist.h  chanlistbase.ui  configure.cpp  configure.h  containerview.cpp  containerview.h  eventsrc  extraview.cpp  extraview.h  fe-kde.cpp  fe-kde.h  helperwidgets.cpp  helperwidgets.h  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  rawlog.cpp  rawlog.h  rawlogbase.ui  serverlist.cpp  serverlist.h  serverlist.rc  tabwidget.cpp  tabwidget.h  textwidget.cpp  textwidget.h  vertigo.desktop  vertigo.rc
vertigo/vertigo/fe-kde/backport/: Makefile  Makefile.am  Makefile.in  ktabbar.cpp  ktabwidget.cpp
vertigo/vertigo/fe-kde/pics/: Makefile.am  Makefile.in
vertigo/vertigo/plugins/: Makefile.in
vertigo/vertigo/plugins/mailcheck/: Makefile  Makefile.in
vertigo/vertigo/plugins/perl/: Makefile.am  Makefile.in
vertigo/vertigo/plugins/python/: Makefile.in  python.loT
vertigo/vertigo/plugins/tcl/: Makefile.in
vertigo/vertigo/plugins/xdcc/: Makefile  Makefile.in
